tests/negative/gold/import7_test.gold
tests/negative/import7_test.toit:3:20: error: Not at dedent
import math as foo import math as bar
                   ^~~~~~
Compilation failed.
